More menus templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ set(
         src/presenters/main-menu/sfml-main-menu-presenter.hpp
         src/exceptions/MoveBackException.cpp
         src/exceptions/MoveBackException.hpp
-        src/exceptions/ExitRequiredException.cpp src/exceptions/ExitRequiredException.hpp)
+        src/exceptions/ExitRequiredException.cpp
+        src/exceptions/ExitRequiredException.hpp
+        src/state-machine/states/state.cpp src/state-machine/states/about-menu-state.cpp src/state-machine/states/about-menu-state.hpp src/presenters/about-menu/about-menu-presenter.hpp src/presenters/credits-menu/credits-menu-presenter.hpp src/state-machine/states/credits-menu-state.cpp src/state-machine/states/credits-menu-state.hpp)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
