Adding presenter factory and about-menu. Refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -static")
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(
-        SOURCE_FILES
+set(SOURCE_FILES
         main.cpp
         src/state-machine/state-machine.cpp
         src/state-machine/state-machine.hpp
@@ -18,11 +17,20 @@ set(
         src/presenters/main-menu/main-menu-submenues.hpp
         src/presenters/main-menu/sfml-main-menu-presenter.cpp
         src/presenters/main-menu/sfml-main-menu-presenter.hpp
-        src/exceptions/MoveBackException.cpp
-        src/exceptions/MoveBackException.hpp
-        src/exceptions/ExitRequiredException.cpp
-        src/exceptions/ExitRequiredException.hpp
-        src/state-machine/states/state.cpp src/state-machine/states/about-menu-state.cpp src/state-machine/states/about-menu-state.hpp src/presenters/about-menu/about-menu-presenter.hpp src/presenters/credits-menu/credits-menu-presenter.hpp src/state-machine/states/credits-menu-state.cpp src/state-machine/states/credits-menu-state.hpp)
+        src/exceptions/move-back-exception.cpp
+        src/exceptions/move-back-exception.hpp
+        src/exceptions/exit-required-exception.cpp
+        src/exceptions/exit-required-exception.hpp
+        src/state-machine/states/state.cpp
+        src/state-machine/states/about-menu-state.cpp
+        src/state-machine/states/about-menu-state.hpp
+        src/presenters/about-menu/about-menu-presenter.hpp
+        src/presenters/credits-menu/credits-menu-presenter.hpp
+        src/state-machine/states/credits-menu-state.cpp
+        src/state-machine/states/credits-menu-state.hpp
+        src/presenters/about-menu/sfml_about_menu_presenter.cpp
+        src/presenters/about-menu/sfml_about_menu_presenter.hpp
+        src/presenters/factory/presenter-factory.hpp src/presenters/factory/sfml-presenter-factory.cpp src/presenters/factory/sfml-presenter-factory.hpp)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
