Refactoring in CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,13 @@ set(SOURCE_FILES
         src/game/sfml-super-mario/GameObjectManager.hpp
         src/game/sfml-super-mario/Player.cpp
         src/game/sfml-super-mario/Player.hpp
-        src/sfml-provider/SfmlProvider.cpp src/sfml-provider/SfmlProvider.hpp src/state-machine/states/game-state/GameState.cpp src/state-machine/states/game-state/GameState.hpp src/game/sfml-super-mario/Camera.cpp src/game/sfml-super-mario/Camera.hpp)
+        src/sfml-provider/SfmlProvider.cpp
+        src/sfml-provider/SfmlProvider.hpp
+        src/state-machine/states/game-state/GameState.cpp
+        src/state-machine/states/game-state/GameState.hpp
+        src/game/sfml-super-mario/Camera.cpp
+        src/game/sfml-super-mario/Camera.hpp
+        )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
